--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "ConnectionStrings": {
-    "Default": "Server=ALEX;Database=FilmLibrary;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "Default": "Server=ALEX;Database=FilmLibrary;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "StorePath": "C:\\Users\\Арбузер\\OneDrive\\Desktop\\БД\\FilmLibrary\\store"
 }
