--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
+    "@types/react-dropzone": "^4.2.2",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^7.9.6",
     "tailwind-merge": "^3.4.0",
