сделал сущности Genre и Film

--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "Default": "Server=ALEX;Database=FilmLibrary;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true;"
-    },
+  "ConnectionStrings": {
+    "Default": "Server=ALEX\\SQLEXPRESS;Database=filmoteka;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
@@ -9,5 +9,5 @@
         }
     },
     "AllowedHosts": "*",
-    "StorePath": "C:\\Users\\Арбузер\\OneDrive\\Desktop\\БД\\FilmLibrary\\store"
+    "StorePath": "D:\\studies\\FilmLibrary\\store"
 }
