--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,16 @@
     "@hookform/resolvers": "^5.2.2",
     "@types/react-dropzone": "^4.2.2",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^7.9.6",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "yup": "^1.7.1",
     "zustand": "^5.0.8"
@@ -28,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^24.10.1",
     "@types/react": "^18.3.27",
+    "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^18.3.7",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.1",
